# ACRA_BizFinx

./: .gitignore  build_exe.py  dist_readme.txt  pyproject.toml
.claude/: launch.json
companies/201631437H/: mapping.yaml  profile.yaml
seed/: fact_map_seed.json
src/acra_helper/: cli.py
src/acra_helper/generate/: prefill_writer.py  report.py  xbrl_writer.py
src/acra_helper/mapping/: engine.py  rtf_builder.py
src/acra_helper/parser/: excel_parser.py  word_parser.py
src/acra_helper/taxonomy/: __init__.py  contexts.py  contexts_seed.json  fact_map_seed.json  namespaces.py
src/acra_helper/validate/: calc_validator.py
tests/: test_roundtrip.py  test_xbrl_writer.py
tests/fixtures/: calc_rules_seed.json  fact_map_seed.json
web/: app.py
web/templates/: index.html
